# pygraphc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  PLAN.md  README.md  bench_remapped_overhead.py  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.py  supervisord.conf
.github/workflows/: ci.yml
benchmarks/: bench_ab.py  bench_all.py
benchmarks/findings/: 4ary-heap.md  4ary-heap_after.txt  4ary-heap_baseline.txt  bulk-alloc.md  bulk-alloc_baseline.txt  cpython-api-bottlenecks.md  data-gathering-strategies.md  hash-function.md  hash-function_after.txt  hash-function_baseline.txt  numpy-mapped-edges.md  numpy-mapped-edges_after.txt  numpy-mapped-edges_baseline.txt  numpy-node-ids.md  numpy-node-ids_after.txt  numpy-node-ids_baseline.txt  session-overview.md  set-construction-floor.md  split-lists-interface.md
linter_scripts/: common.py  mock_requires_spec.py  test_structure_convention.py
src/cgraph/: __init__.py  _core.c  _dag_learn.c
src/cgraph/tests/: test_correctness.py  test_performance.py
src/connected_component/: __init__.py  _core.c
src/connected_component.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/connected_component/tests/: test_correctness.py  test_performance.py
src/networkc/: __init__.py  _core.c
src/pygraphc/: __init__.py  _core.c
tests/performance_tests/: test_bfs_perf.py  test_bridges_perf.py  test_cc_branches_perf.py  test_cycle_dag_perf.py  test_dijkstra_perf.py  test_directed_perf.py  test_masked_views.py  test_performance.py  test_phase6_perf.py
tests/unit_tests/: test_correctness.py  test_cycle_basis.py  test_dag_learn.py  test_dag_longest_path.py  test_directed_graph.py  test_edge_paths.py  test_graph_class.py  test_graph_queries.py  test_graph_view.py  test_multigraph.py  test_node_mask.py  test_split_node.py
