[project]
name = "connected-component"
version = "0.1.0"
description = ""
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Lennart Jansen", email = "lejansen.home@gmail.com" },
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
]
benchmark = [
    "pytest>=8.0",
    "scipy>=1.14",
    "numpy>=2.0",
]

[project.urls]
Homepage = "https://github.com/lejansenGitHub/ConnectedComponent"
Repository = "https://github.com/lejansenGitHub/ConnectedComponent"
Issues = "https://github.com/lejansenGitHub/ConnectedComponent/issues"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors
    "B",        # flake8-bugbear
    "F",        # pyflakes
    "I",        # isort
    "PLE",      # pylint errors
    "PLC",      # pylint convention
    "PLR",      # pylint refactor
    "PLW",      # pylint warning
    "PGH",      # pygrep-hooks
    "FBT",      # flake8-boolean-trap
    "TID",      # flake8-tidy-imports
    "RSE",      # flake8-raise
    "SIM",      # flake8-simplify
    "RET",      # flake8-return
    "ISC",      # flake8-implicit-string-concat
    "COM",      # flake8-commas
    "PIE",      # flake8-pie
    "C4",       # flake8-comprehensions
    "RUF028",   # Ruff-specific rules: invalid formatter suppression
    "RUF022",   # Ruff-speficic rules: sort __all__
    "RUF100",   # Ruff-specific rules: unused-noqa
    "UP",       # pyupgrade
    "PERF",     # perflint
    "T20",      # forbid prints
    "PT",       # flake8-pytest-style
]
ignore = [
    "PT011",    # pytest-raises-too-broad
    "SIM105",   # Note that contextlib.suppress is slower than using try-except-pass directly. For performance-critical code, consider retaining the try-except-pass pattern.
    "SIM116",   # bad for coverage of the conditions
    "SIM117",   # with statements can have very different context
    "RET504",   # local assignment before return benefits labeling of the return values and debugging
    "COM812",   # missing tailing comma
    "UP008",    # super-call-with-parameters
    "UP015",    # redundant-open-modes -> writing it explicitly is more readable
    "UP035",    # deprecated imports -> should be done project wide for consistecy
    "UP044",    # breaks cython code
    "PLW1641",  # Object does not implement `__hash__` method
    "PLR2004",  # magic values in comparisons — too noisy in tests

    # introduced in 0.15.0, require iterative activation
    "PLW0108",  # unnecessary-lambda
    "UP042",    # replace-str-enum
    "FURB110",  # if-exp-instead-of-or-operator
    "FURB171",  # single-item-membership-test
    "PLC0415",  # import not at top-level — intentional for circular import avoidance and lazy loading
    "UP046",    # Generic subclass vs type parameters — dataclass generics need Generic[] syntax
]

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = ["pytest.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["connected_component.tests.*"]
disallow_untyped_decorators = false
disable_error_code = ["call-arg", "arg-type", "attr-defined", "misc", "unused-ignore"]

[tool.pytest.ini_options]
testpaths = ["src"]
