[project]
name = "pygraphc"
version = "0.1.0"
description = "Fast graph algorithms with C kernels — connected components via union-find"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Lennart Jansen", email = "lejansen.home@gmail.com" },
]
keywords = ["graph", "connected-components", "union-find", "c-extension"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "pytest-cov>=6.0",
    "diff-cover>=9.0",
    "ruff>=0.15",
    "mypy>=1.14",
    "pre-commit>=4.0",
    # blueprint-linters: installed separately from vendor/ wheel (not on PyPI)
]
benchmark = [
    "pytest>=8.0",
    "scipy>=1.14",
    "numpy>=2.0",
]

[project.urls]
Homepage = "https://github.com/lejansenGitHub/pygraphc"
Repository = "https://github.com/lejansenGitHub/pygraphc"
Issues = "https://github.com/lejansenGitHub/pygraphc/issues"

[tool.uv]
find-links = ["vendor/"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
pygraphc = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 120
preview = true

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors
    "B",        # flake8-bugbear
    "F",        # pyflakes
    "I",        # isort
    "PLE",      # pylint errors
    "PLC",      # pylint convention
    "PLR",      # pylint refactor
    "PLW",      # pylint warning
    "PGH",      # pygrep-hooks
    "FBT",      # flake8-boolean-trap
    "TID",      # flake8-tidy-imports
    "RSE",      # flake8-raise
    "SIM",      # flake8-simplify
    "RET",      # flake8-return
    "ISC",      # flake8-implicit-string-concat
    "COM",      # flake8-commas
    "PIE",      # flake8-pie
    "C4",       # flake8-comprehensions
    "RUF028",   # Ruff-specific rules: invalid formatter suppression
    "RUF022",   # Ruff-specific rules: sort __all__
    "RUF100",   # Ruff-specific rules: unused-noqa
    "UP",       # pyupgrade
    "PERF",     # perflint
    "T20",      # forbid prints
    "PT",       # flake8-pytest-style
    "TRY",      # tryceratops
]
ignore = [
    "PT011",    # pytest-raises-too-broad
    "SIM105",   # contextlib.suppress is slower than try-except-pass
    "SIM116",   # bad for coverage of the conditions
    "SIM117",   # with statements can have very different context
    "RET504",   # local assignment before return benefits labeling and debugging
    "COM812",   # missing trailing comma
    "UP008",    # super-call-with-parameters
    "UP015",    # redundant-open-modes -> writing it explicitly is more readable
    "PLR2004",  # magic values in comparisons — too noisy in tests
    "PLR0904",  # too many public methods — Graph is intentionally a wide API surface
    "PLR0913",  # too many arguments — some functions need many parameters
    "PLR0914",  # too many local variables — benchmark tests need many timing vars
    "PLR0917",  # too many positional args — internal helpers, not public API
    "PLR6301",  # method could be function — test classes group related tests
    "PLW0108",  # unnecessary-lambda
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TRY", "PLC0415"]
"tests/performance_tests/**" = ["B903"]  # plain classes simulate domain objects in benchmarks

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"unittest.mock".msg = "Use pytest-mock instead."

[tool.mypy]
python_version = "3.11"
strict = true
disallow_any_generics = true
disallow_any_explicit = true
disallow_any_unimported = true
disallow_subclassing_any = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["pytest.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pygraphc._core", "pygraphc._dag_learn", "scipy.*", "numpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false
disable_error_code = ["call-arg", "arg-type", "attr-defined", "misc", "unused-ignore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "performance: performance benchmarks (deselect with '-m not performance')",
]
